--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container center-align">
-  <div class="row">
-    <div class="col s12">
-      <h1>Add a Recipe</h1>
-    </div>
-  </div>
+	<div class="row">
+		<div class="col s12">
+			<h1>Add a Recipe</h1>
+		</div>
+	</div>
 </div>
 
 <div class="row card-panel">
-  <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
-    <!-- Category Selector -->
-    <div class="row Grey lighten-1">
-      <div class="input-field col s12">
-        <i class="fas fa-chevron-down prefix"></i>
-        <select id="category" name="category" class="validate">
+	<form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+		<!-- Category Selector -->
+		<div class="row Grey lighten-1">
+			<div class="input-field col s12">
+				<i class="fas fa-chevron-down prefix"></i>
+				<select id="category" name="category" class="validate">
           <option value="" disabled selected>Select Meal Category</option>
           {% for category in categories %}
           <option value="{{ category.category }}"
@@ -22,13 +22,13 @@
           >
           {% endfor %}
         </select>
-      </div>
-    </div>
-    <!-- Recipe Name -->
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="fas fa-utensils prefix"></i>
-        <input
+			</div>
+		</div>
+		<!-- Recipe Name -->
+		<div class="row">
+			<div class="input-field col s12">
+				<i class="fas fa-utensils prefix"></i>
+				<input
           id="recipe_name"
           name="recipe_name"
           type="text"
@@ -37,14 +37,14 @@
           class="validate"
           required
         />
-        <label for="recipe_name">Recipe Name</label>
-      </div>
-    </div>
-    <!-- Recipe Ingredients -->
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="fas fa-egg prefix"></i>
-        <textarea
+				<label for="recipe_name">Recipe Name</label>
+			</div>
+		</div>
+		<!-- Recipe Ingredients -->
+		<div class="row">
+			<div class="input-field col s12">
+				<i class="fas fa-egg prefix"></i>
+				<textarea
           name="recipe_ingredients"
           id="recipe_ingredients"
           cols="1"
@@ -52,18 +52,17 @@
           class="materialize-textarea validate"
           required
         ></textarea>
-        <label for="recipe_ingredients">Recipe Ingredients</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
-          >Each ingredient must be entered on a new line.</span
-        >
-      </div>
-    </div>
+				<label for="recipe_ingredients">Recipe Ingredients</label>
+				<span class="helper-text" data-error="wrong" data-success="right"
+          >Each ingredient must be entered on a new line.</span>
+			</div>
+		</div>
 
-    <!-- Recipe Method -->
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="fas fa-book-open prefix"></i>
-        <textarea
+		<!-- Recipe Method -->
+		<div class="row">
+			<div class="input-field col s12">
+				<i class="fas fa-book-open prefix"></i>
+				<textarea
           id="recipe_method"
           name="recipe_method"
           cols="1"
@@ -71,18 +70,17 @@
           class="materialize-textarea validate"
           required
         ></textarea>
-        <label for="recipe_method">Recipe Method</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
-          >Add each step in the recipe on a new line.</span
-        >
-      </div>
-    </div>
+				<label for="recipe_method">Recipe Method</label>
+				<span class="helper-text" data-error="wrong" data-success="right"
+          >Add each step in the recipe on a new line.</span>
+			</div>
+		</div>
 
-    <!-- Add an image -->
-    <div class="row">
-      <div class="input-field col s12">
-        <i class="fas fa-images prefix"></i>
-        <input
+		<!-- Add an image -->
+		<div class="row">
+			<div class="input-field col s12">
+				<i class="fas fa-images prefix"></i>
+				<input
           id="image_url"
           name="image_url"
           type="text"
@@ -91,27 +89,26 @@
           class="validate"
           required
         />
-        <label for="image_url">Add an image</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
+				<label for="image_url">Add an image</label>
+				<span class="helper-text" data-error="wrong" data-success="right"
           >To add an image to your recipe, paste an image URL here. You must
-          include 'https://'</span
-        >
-      </div>
-    </div>
-    <div>
-      <!-- Date recipe added -->
-      <input id="date_added" name="date_added" hidden/>
+          include 'https://'</span>
+			</div>
+		</div>
+		<div>
+			<!-- Date recipe added -->
+			<input id="date_added" name="date_added" hidden/>
     </div>
 
-    <!-- Submit Recipe Button -->
-    <div class="row">
-      <div class="col s12 center-align">
-        <button type="submit" class="col s12 btn-large red lighten-2">
+			<!-- Submit Recipe Button -->
+			<div class="row">
+				<div class="col s12 center-align">
+					<button type="submit" class="col s12 btn-large red lighten-2">
           Submit Recipe
         </button>
-      </div>
-    </div>
-  </form>
+				</div>
+			</div>
+	</form>
 </div>
 
 <script src="{{ url_for('static', filename='js/add_recipe.js') }}"></script>
