--- a/templates/base.html
+++ b/templates/base.html
@@ -1,203 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Playfair+Display:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" type="image/x-icon" href="static/css/images/favicon.ico">
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/style.css') }}"
-    />
-    {% block styles %} {% endblock %}
-    <title>Meatblog</title>
-  </head>
-  <body>
-    <header>
-      <!--Main Nav Bar -->
-      <div class="row">
-        <div class="col-12 navigation-bar">
-          <nav class="red lighten-3">
-            <div class="nav-wrapper">
-              <a href="{{ url_for('home') }}">
-                <img
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		type="text/css" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Playfair+Display:ital@0;1&display=swap"
+		rel="stylesheet" />
+	<link rel="icon" type="image/x-icon" href="static/css/images/favicon.ico">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+	{% block styles %} {% endblock %}
+	<title>Meatblog</title>
+</head>
+
+<body>
+	<header>
+		<!--Main Nav Bar -->
+		<div class="row">
+			<div class="col-12 navigation-bar">
+				<nav class="red lighten-3">
+					<div class="nav-wrapper">
+						<a href="{{ url_for('home') }}">
+							<img
                   class="logo"
                   src="{{ url_for('static', filename='css/images/logo.png') }}"
                   alt="Meatblog"
               /></a>
-              <a
-                href="#"
-                data-target="mobile-demo"
-                class="sidenav-trigger right"
-                ><i class="fas fa-bars"></i
-              ></a>
-              <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
-                {% if session.user %}
-                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                {% else %}
-                <li>
-                  <a href="{{ url_for('home', _anchor='about-section') }}"
-                    >About</a
-                  >
-                </li>
-                {% endif %} 
-                <li>
-                  <a href="https://meatboxlondon.co.uk/" target="_blank"
-                    >Order Meat</a
-                  >
-                </li>
-                {% if session.user %}
-                <li>
-                  <a
-                    href="{{ url_for('sign_out') }}"
-                    class="waves-effect waves-light btn red lighten-2"
-                    >Sign Out</a
-                  >
-                </li>
-                {% else %}
-                <li>
-                  <a
-                    href="{{ url_for('sign_up') }}"
-                    class="waves-effect waves-light btn red lighten-2"
-                    >Sign Up</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="{{ url_for('sign_in') }}"
-                    class="sign-in-btn waves-effect waves-light btn red lighten-5"
-                    >Sign In</a
-                  >
-                </li>
-                {% endif %}
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
-      <!-- Mobile Nav Bar -->
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
-        {% if session.user %}
-        <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-        {% else %}
-        <li>
-          <a href="{{ url_for('home', _anchor='about-section') }}">About</a>
-        </li>
-        {% endif %}
-        <li>
-          <a href="https://meatboxlondon.co.uk/" target="_blank">Order Meat</a>
-        </li>
-         {% if session.user %}
-        <li>
-          <a
-            href="{{ url_for('sign_out') }}"
-            class="waves-effect waves-light btn red lighten-2"
-            >Sign Out</a
-          >
-        </li>
-        {% else %}
-        <li>
-          <a
-            href="{{ url_for('sign_up') }}"
-            class="waves-effect waves-light btn red lighten-2"
-            >Sign Up</a
-          >
-        </li>
-        <li>
-          <a
-            href="{{ url_for('sign_in') }}"
-            class="sign-in-btn waves-effect waves-light btn red lighten-5"
-            >Sign In</a
-          >
-        </li>
-        {% endif %}
-      </ul>
-    </header>
-    <div>
-      <!-- flash messages -->
-      {% with messages = get_flashed_messages() %} {% if messages %} {% for
+							<a href="#" data-target="mobile-demo"
+								class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+							<ul class="right hide-on-med-and-down">
+								<li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
+								{% if session.user %}
+								<li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+								{% else %}
+								<li>
+									<a href="{{ url_for('home', _anchor='about-section') }}">About</a>
+								</li>
+								{% endif %}
+								<li>
+									<a href="https://meatboxlondon.co.uk/" target="_blank">Order Meat</a>
+								</li>
+								{% if session.user %}
+								<li>
+									<a href="{{ url_for('sign_out') }}"
+										class="waves-effect waves-light btn red lighten-2">Sign Out</a>
+								</li>
+								{% else %}
+								<li>
+									<a href="{{ url_for('sign_up') }}"
+										class="waves-effect waves-light btn red lighten-2">Sign Up</a>
+								</li>
+								<li>
+									<a href="{{ url_for('sign_in') }}"
+										class="sign-in-btn waves-effect waves-light btn red lighten-5">Sign In</a>
+								</li>
+								{% endif %}
+							</ul>
+					</div>
+				</nav>
+			</div>
+		</div>
+		<!-- Mobile Nav Bar -->
+		<ul class="sidenav" id="mobile-demo">
+			<li><a href="{{ url_for('find_recipe') }}">Find A Recipe</a></li>
+			{% if session.user %}
+			<li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+			{% else %}
+			<li>
+				<a href="{{ url_for('home', _anchor='about-section') }}">About</a>
+			</li>
+			{% endif %}
+			<li>
+				<a href="https://meatboxlondon.co.uk/" target="_blank">Order Meat</a>
+			</li>
+			{% if session.user %}
+			<li>
+				<a href="{{ url_for('sign_out') }}" class="waves-effect waves-light btn red lighten-2">Sign Out</a>
+			</li>
+			{% else %}
+			<li>
+				<a href="{{ url_for('sign_up') }}" class="waves-effect waves-light btn red lighten-2">Sign Up</a>
+			</li>
+			<li>
+				<a href="{{ url_for('sign_in') }}" class="sign-in-btn waves-effect waves-light btn red lighten-5">Sign
+					In</a>
+			</li>
+			{% endif %}
+		</ul>
+	</header>
+	<div>
+		<!-- flash messages -->
+		{% with messages = get_flashed_messages() %} {% if messages %} {% for
       message in messages %}
-      <div class="row flashes">
-        <h3 class="red lighten-2 center-align">{{ message }}</h3>
-      </div>
-      {% endfor %} {% endif %} {% endwith %}
-    </div>
+		<div class="row flashes">
+			<h3 class="red lighten-2 center-align">{{ message }}</h3>
+		</div>
+		{% endfor %} {% endif %} {% endwith %}
+	</div>
 
-    <main class="container">
-      {% block content %} {% endblock %}
-    </main>
+	<main class="container">
+		{% block content %} {% endblock %}
+	</main>
 
-    <!-- Footer -->
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">© Michelle L Clement 2020</h5>
-            <p class="grey-text text-lighten-4">
-              Website Designed & Built by Michelle L Clement
-            </p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Follow us on socials</h5>
-            <ul>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  >Instagram</a
-                >
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  >Facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  class="grey-text text-lighten-3"
-                  href="https://www.twitter.com/"
-                  target="_blank"
-                  >Twitter</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+	<!-- Footer -->
+	<footer class="page-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12">
+					<h5 class="white-text">© Michelle L Clement 2020</h5>
+					<p class="grey-text text-lighten-4">
+						Website Designed & Built by Michelle L Clement
+					</p>
+				</div>
+				<div class="col l4 offset-l2 s12">
+					<h5 class="white-text">Follow us on socials</h5>
+					<ul>
+						<li>
+							<a class="grey-text text-lighten-3" href="https://www.instagram.com/"
+								target="_blank">Instagram</a>
+						</li>
+						<li>
+							<a class="grey-text text-lighten-3" href="https://www.facebook.com/"
+								target="_blank">Facebook</a>
+						</li>
+						<li>
+							<a class="grey-text text-lighten-3" href="https://www.twitter.com/"
+								target="_blank">Twitter</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-    <!-- Scripts -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script 
-    src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script
-      src="https://platform-api.sharethis.com/js/sharethis.js#property=5f68bb81a86c6e0012411206&product=inline-share-buttons"
-      async="async"
-    ></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %} {% endblock %}
-  </body>
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script
+		src="https://platform-api.sharethis.com/js/sharethis.js#property=5f68bb81a86c6e0012411206&product=inline-share-buttons"
+		async="async"></script>
+	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+	{% block scripts %} {% endblock %}
+</body>
+
 </html>
