--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,68 +1,59 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container center-align recipe-of-month-title">
-  <div class="row">
-    <div class="col s12">
-      <h1>Find a Recipe</h1>
-    </div>
-  </div>
+	<div class="row">
+		<div class="col s12">
+			<h1>Find a Recipe</h1>
+		</div>
+	</div>
 </div>
 
 <!-- Collapsible -->
 <div class="container">
-  <ul class="collapsible recipe-list">
-    {% for recipe in recipes %}
+	<ul class="collapsible recipe-list">
+		{% for recipe in recipes %}
 
-    <li>
-      <div class="row recipes collapsible-header white-text red lighten-3">
-        <div class="recipes-img col s12 m3">
-          <img
+		<li>
+			<div class="row recipes collapsible-header white-text red lighten-3">
+				<div class="recipes-img col s12 m3">
+					<img
             class="responsive-img"
             src="{{ recipe.image_url }}"
             alt="image of {{ recipe.recipe_name }}"
           />
         </div>
 
-        <div class="col s12 m7">
-          <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
-          {{ recipe.category }}
-          <p><em>by: {{ recipe.created_by }}</em></p>
-        </div>
+					<div class="col s12 m7">
+						<h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
+						{{ recipe.category }}
+						<p><em>by: {{ recipe.created_by }}</em></p>
+					</div>
 
-        <div class="col s12 m2 recipe-buttons left-align">
-          <a
-            href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
-            class="waves-effect waves-light btn view-btn red lighten-5"
-            >View Recipe</a
-          >
-          {% if session.user|lower == recipe.created_by|lower %}
-          <a
-            href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-            class="waves-effect waves-light btn red lighten-2"
-            >Edit Recipe</a
-          >
-          {% endif %}
-        </div>
-      </div>
+					<div class="col s12 m2 recipe-buttons left-align">
+						<a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
+							class="waves-effect waves-light btn view-btn red lighten-5">View Recipe</a>
+						{% if session.user|lower == recipe.created_by|lower %}
+						<a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
+							class="waves-effect waves-light btn red lighten-2">Edit Recipe</a>
+						{% endif %}
+					</div>
+				</div>
 
-      <!-- Expandable Content -->
-      <div class="col s9"></div>
-      <div class="collapsible-body">
-        <div>
-          <h2>Ingredients</h2>
-          {% for ingredient in recipe.recipe_ingredients.splitlines() %}
-          <p>{{ ingredient }}</p>
-          {% endfor %}
-          <a
-            href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
-            class="waves-effect waves-light btn view-btn red lighten-5"
-            >View Recipe</a
-          >
-        </div>
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
+				<!-- Expandable Content -->
+				<div class="col s9"></div>
+				<div class="collapsible-body">
+					<div>
+						<h2>Ingredients</h2>
+						{% for ingredient in recipe.recipe_ingredients.splitlines() %}
+						<p>{{ ingredient }}</p>
+						{% endfor %}
+						<a href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
+							class="waves-effect waves-light btn view-btn red lighten-5">View Recipe</a>
+					</div>
+				</div>
+		</li>
+		{% endfor %}
+	</ul>
 </div>
 
 {% endblock %}
