--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -28,7 +28,7 @@
           <p><em>by: {{ recipe.created_by }}</em></p>
         </div>
 
-        <div class="col s12 m2 recipe-buttons left-align">
+        <div class="col s12 m2 recipe-buttons not-collapse left-align">
           <a
             href="{{ url_for('view_recipe', recipe_id=recipe._id) }}"
             class="waves-effect waves-light btn view-btn red lighten-5"
@@ -37,7 +37,7 @@
           {% if session.user|lower == recipe.created_by|lower %}
           <a
             href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-            class="waves-effect waves-light btn red lighten-2"
+            class="waves-effect waves-light not-collapse btn red lighten-2"
             >Edit Recipe</a
           >
           {% endif %}
