Work to correct sign out link copy issue and existing user flash message. More to do.

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -22,7 +22,7 @@
           />
         </div>
 
-        <div class="col s12 m7 not-collapse">
+        <div class="col s12 m7">
           <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
           {{ recipe.category }}
           <p><em>by: {{ recipe.created_by }}</em></p>
