Correcting date_added and order of recipes displaying

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -26,6 +26,7 @@
           <h5><i class="fas fa-utensils"></i>{{ recipe.recipe_name }}</h5>
           {{ recipe.category }}
           <p><em>by: {{ recipe.created_by }}</em></p>
+          <p><em>by: {{ recipe.date_added }}</em></p>
         </div>
 
         <div class="col s12 m2 recipe-buttons not-collapse left-align">
