--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Playfair+Display:ital@0;1&display=swap"
 		rel="stylesheet" />
-	<link rel="icon" type="image/x-icon" href="{{url_for('static' filename='css/images/favicon.ico')}}">
+	<link rel="icon" type="image/x-icon" href="{{url_for('static', filename='css/images/favicon.ico')}}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 	{% block styles %} {% endblock %}
 	<title>Meatblog</title>
