--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="container center-align">
+<section class="container center-align">
 	<div class="row">
 		<div class="col s12">
 			<h1>Sign In</h1>
@@ -9,8 +9,10 @@
 			</p>
 		</div>
 	</div>
-</div>
-<div class="row">
+</section>
+
+<!-- Sign in form -->
+<section class="row">
 	<form class="col s12" method="POST" action="{{ url_for('sign_in') }}">
 		<div class="card-panel">
 			<!-- Username -->
@@ -56,15 +58,15 @@
 			</div>
 		</div>
 	</form>
-</div>
+</section>
 
 <!-- New here? Sign up -->
-<div class="row">
+<section class="row">
 	<div class="col s12">
 		<p class="center-align">
 			New here?<a href="{{ url_for('sign_up') }}"> Sign up here</a>
 		</p>
 	</div>
-</div>
+</section>
 
 {% endblock %}
