--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="container center-align">
+<section class="container center-align">
 	<div class="row">
 		<div class="col s12">
 			<h1>Edit Recipe</h1>
 		</div>
 	</div>
-</div>
+</section>
 
-<div class="row card-panel">
+<section class="row card-panel">
 	<form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
 		<!-- Category Selector -->
 		<div class="row">
@@ -132,6 +132,6 @@
 			</div>
 		</div>
 	</form>
-</div>
+</section>
 
 {% endblock %}
