--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="container center-align recipe-of-month-title">
+<section class="container center-align recipe-of-month-title">
   <div class="row">
     <div class="col s12">
       <h1>Find a Recipe</h1>
     </div>
   </div>
-</div>
+</section>
 
 <!-- Collapsible -->
-<div class="container">
+<section class="container">
   <ul class="collapsible recipe-list">
     {% for recipe in recipes %}
     <li>
@@ -63,6 +63,6 @@
     </li>
     {% endfor %}
   </ul>
-</div>
+</section>
 
 {% endblock %}
