--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %} {% block content %}
 
-<section class="container center-align recipe-of-month-title">
-  <div class="row">
-    <div class="col s12">
+<section class="container">
+  <div class="row center-align">
+    <div class="col s12 m6">
       <h1>Find a Recipe</h1>
+      <div class="input-field col s12">
+        <i class="fas fa-search prefix"></i>
+        <input id="search" name="search" type="text" />
+        <label for="search">What are you searching for?</label>
+        <button
+          id="search-button"
+          type="submit"
+          class="col s12 btn-large red lighten-2"
+        >
+          Search
+        </button>
+      </div>
     </div>
   </div>
 </section>
