remove 'right' and 'wrong' from text as was obscuring helper text

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -99,7 +99,7 @@
           required
         />
         <label for="image_url">Insert new image</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
+        <span class="helper-text"
           >If you want to change your image, paste a new image URL above. You
           must include 'https://'. <br />If you do not wish to change your
           image, leave this box as it is.</span
