--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -53,7 +53,7 @@
           required
         ></textarea>
         <label for="recipe_ingredients">Recipe Ingredients</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
+        <span class="helper-text"
           >Each ingredient must be entered on a new line.</span
         >
       </div>
@@ -72,7 +72,7 @@
           required
         ></textarea>
         <label for="recipe_method">Recipe Method</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
+        <span class="helper-text"
           >Add each step in the recipe on a new line.</span
         >
       </div>
@@ -92,7 +92,7 @@
           required
         />
         <label for="image_url">Add an image</label>
-        <span class="helper-text" data-error="wrong" data-success="right"
+        <span class="helper-text"
           >To add an image to your recipe, paste an image URL here. You must
           include 'https://'</span
         >
