--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,12 +2,12 @@
 
 <section class="container">
   <div class="row center-align">
-    <div class="col s12 m6">
+    <div class="col s12 m6 find_recipe_col">
       <h1>Find a Recipe</h1>
       <div class="input-field col s12">
         <i class="fas fa-search prefix"></i>
         <input id="search" name="search" type="text" />
-        <label for="search">What are you searching for?</label>
+        <label for="search">Search for terms such as 'Beef' or 'Buffalo Wings'</label>
         <button
           id="search-button"
           type="submit"
