--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -14,13 +14,26 @@
 		{% for doc in search_results %}
 		<li>
 			<div class="row recipes collapsible-header white-text red lighten-3">
-
-				<div class="col s12 m7">
-					<h5><i class="fas fa-utensils"></i>{{ doc.recipe_name }}</h5>
-					{{ doc.category }}
-					<p><em>by: {{ doc.created_by }}</em></p>
-					<p><em>by: {{ doc.date_added }}</em></p>
+				<div class="recipes-img col s12 m3">
+					<img
+            class="responsive-img"
+            src="{{ doc.image_url }}"
+            alt="image of {{ doc.recipe_name }}"
+          />
+        </div>
+					<div class="col s12 m7">
+						<h5><i class="fas fa-utensils"></i>{{ doc.recipe_name }}</h5>
+						{{ doc.category }}
+						<p><em>by: {{ doc.created_by }}</em></p>
+						<p><em>by: {{ doc.date_added }}</em></p>
+					</div>
+                    <div class="col s12 m2 recipe-buttons not-collapse left-align">
+          <a
+            href=""
+            class="waves-effect waves-light btn view-btn red lighten-5"
+            >View Recipe</a
+          >
+        </div>
 				</div>
-			</div>
-			{% endfor %}
-			{% endblock %}
+				{% endfor %}
+				{% endblock %}
