New route to view search recipe working. New template not displaying info yet

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -29,8 +29,8 @@
 					</div>
                     <div class="col s12 m2 recipe-buttons not-collapse left-align">
           <a
-            href=""
-            class="waves-effect waves-light btn view-btn red lighten-5"
+            href="{{ url_for('view_search_result', recipe_id=doc._id) }}"
+            class="waves-effect waves-light btn search-result-view-btn view-btn red lighten-5"
             >View Recipe</a
           >
         </div>
