--- a/templates/view_search_result.html
+++ b/templates/view_search_result.html
@@ -3,7 +3,7 @@
 <section class="container center-align">
   <div class="row">
     <div class="col s12">
-      <h1>Search Result</h1>
+      <h1>{{ search_results.recipe_name }}</h1>
     </div>
   </div>
 </section>
@@ -28,9 +28,16 @@
     </div>
   </div>
 
-
-
-
-
+  <!-- Recipe Image -->
+  <div class="col l6 s12 recipe-image">
+    <div class="card-panel">
+      <img
+        class="responsive-img"
+        src="{{ search_results.image_url }}"
+        alt="image of {{ search_results.recipe_name }}"
+      />
+    </div>
+  </div>
+</section>
 
 {% endblock %}
