Search function and view recipe now all working

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -8,9 +8,9 @@
   </div>
 </section>
 
-<!-- Collapsible -->
+<!-- Results List -->
 <section class="container">
-  <ul class="collapsible recipe-list">
+  <ul class="recipe-list">
     {% for rec in recipes %}
     <li>
       <div class="row recipes collapsible-header white-text red lighten-3">
