No results messaging now working, as is case insensitivity

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,7 +7,7 @@
       <form method="POST" action="search">
         <div class="input-field col s12">
           <i class="fas fa-search prefix"></i>
-          <input id="search" name="search" type="text" />
+          <input id="search" name="search" type="text" min-length="3" class="validate" required />
           <label for="search"
             >Search for terms such as 'Beef' or 'Buffalo Wings'</label
           >
