Updating code after HTML validation checker

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -9,6 +9,9 @@
 </section>
 
 <section class="row card-panel">
+  <div class="center-align">
+    <h5>To add your own recipe, fill in the details below.</h5>
+  </div>
   <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
     <!-- Category Selector -->
     <div class="row Grey lighten-1">
