--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,9 +10,8 @@
       </p>
     </div>
   </div>
-</section>
 <!-- Sign in form -->
-<section class="row">
+<div class="row">
   <form class="col s12" method="POST" action="{{ url_for('sign_up') }}">
     <div class="card-panel">
       <!-- Username -->
@@ -67,14 +66,15 @@
       </div>
     </div>
   </form>
-</section>
+</div>
 
 <!-- Already Registered? -->
-<section class="row">
+<div class="row">
   <div class="col s12">
     <p class="center-align">
       Already registered?<a href="{{ url_for('sign_in') }}"> Sign in here</a>
     </p>
+  </div>
   </div>
 </section>
 
