styling to mobile modal and form formatting for edit recipe

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -74,8 +74,8 @@
         <textarea
           id="recipe_method"
           name="recipe_method"
-          minlength="150"
-          maxlength="1000"
+          cols="1"
+          rows="15"
           class="materialize-textarea validate"
           required
         >
