--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,7 +9,7 @@
           <i class="fas fa-search prefix"></i>
           <input id="search" name="search" type="text" class="validate" required />
           <label for="search"
-            >Search for terms such as 'Beef' or 'Buffalo Wings'</label
+            >Search for terms like 'Beef' or 'Chicken Wings'</label
           >
           <button
             id="search-button"
