--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,6 +244,11 @@ footer {
   .flashes h3 {
       line-height: 2;
   }
+
+  .modal-close {
+      padding-right: 10px;
+      padding-left: 10px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
