All HTML pages formatted with Prettier

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,10 +7,14 @@
       <form method="POST" action="search">
         <div class="input-field col s12">
           <i class="fas fa-search prefix"></i>
-          <input id="search" name="search" type="text" class="validate" required />
-          <label for="search"
-            >E.g: 'Beef' or 'Chicken Wings'</label
-          >
+          <input
+            id="search"
+            name="search"
+            type="text"
+            class="validate"
+            required
+          />
+          <label for="search">E.g: 'Beef' or 'Chicken Wings'</label>
           <button
             id="search-button"
             type="submit"
