--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,71 +10,71 @@
       </p>
     </div>
   </div>
-<!-- Sign in form -->
-<div class="row">
-  <form class="col s12" method="POST" action="{{ url_for('sign_up') }}">
-    <div class="card-panel">
-      <!-- Username -->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="far fa-user-circle prefix"></i>
-          <input
-            id="username"
-            name="username"
-            type="text"
-            minlength="5"
-            maxlength="15"
-            pattern="^[a-zA-Z0-9]{5,15}$"
-            class="validate"
-            required
-          />
-          <label for="username">Username</label>
-          <span class="helper-text"
-            >Please enter the username you wish to use to sign up. This can
-            consist of letters and numbers only, no special characters.</span
-          >
+  <!-- Sign in form -->
+  <div class="row">
+    <form class="col s12" method="POST" action="{{ url_for('sign_up') }}">
+      <div class="card-panel">
+        <!-- Username -->
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="far fa-user-circle prefix"></i>
+            <input
+              id="username"
+              name="username"
+              type="text"
+              minlength="5"
+              maxlength="15"
+              pattern="^[a-zA-Z0-9]{5,15}$"
+              class="validate"
+              required
+            />
+            <label for="username">Username</label>
+            <span class="helper-text"
+              >Please enter the username you wish to use to sign up. This can
+              consist of letters and numbers only, no special characters.</span
+            >
+          </div>
+        </div>
+        <!-- Password -->
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="fas fa-unlock prefix"></i>
+            <input
+              id="password"
+              name="password"
+              type="password"
+              minlength="5"
+              maxlength="15"
+              pattern="^[a-zA-Z0-9]{5,15}$"
+              class="validate"
+              required
+            />
+            <label for="password">Password</label>
+            <span class="helper-text"
+              >Please enter the password you wish to use to log into the site in
+              the future. This can consist of letters and numbers only and is
+              case sensitive. No special characters.</span
+            >
+          </div>
+        </div>
+
+        <!-- Register -->
+        <div class="row">
+          <button type="submit" class="col s12 btn-large red lighten-2">
+            Sign Up
+          </button>
         </div>
       </div>
-      <!-- Password -->
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="fas fa-unlock prefix"></i>
-          <input
-            id="password"
-            name="password"
-            type="password"
-            minlength="5"
-            maxlength="15"
-            pattern="^[a-zA-Z0-9]{5,15}$"
-            class="validate"
-            required
-          />
-          <label for="password">Password</label>
-          <span class="helper-text"
-            >Please enter the password you wish to use to log into the site in
-            the future. This can consist of letters and numbers only and is case
-            sensitive. No special characters.</span
-          >
-        </div>
-      </div>
-
-      <!-- Register -->
-      <div class="row">
-        <button type="submit" class="col s12 btn-large red lighten-2">
-          Sign Up
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
-
-<!-- Already Registered? -->
-<div class="row">
-  <div class="col s12">
-    <p class="center-align">
-      Already registered?<a href="{{ url_for('sign_in') }}"> Sign in here</a>
-    </p>
+    </form>
   </div>
+
+  <!-- Already Registered? -->
+  <div class="row">
+    <div class="col s12">
+      <p class="center-align">
+        Already registered?<a href="{{ url_for('sign_in') }}"> Sign in here</a>
+      </p>
+    </div>
   </div>
 </section>
 
